force-app/main/default/objects/TriggerSetting__c/TriggerSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to control the Trigger Handling Functionality</description>
    <label>TriggerSetting</label>
</CustomObject>