force-app/main/default/objects/TriggerSetting__c/fields/AppointmentTriggerHandlerAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>AppointmentTriggerHandlerAfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for the functionality around Appointment Trigger Handler</description>
    <label>AppointmentTriggerHandlerAfterInsert</label>
    <type>Checkbox</type>
</CustomField>