force-app/main/default/objects/TriggerSetting__c/fields/GoogleCalendarTriggerHandler__c.field-meta.xml
<CustomField>
    <fullName>GoogleCalendarTriggerHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for the functionality around Google Calendar Trigger Handler</description>
    <label>GoogleCalendarTriggerHandler</label>
    <type>Checkbox</type>
</CustomField>