force-app/main/default/objects/TriggerSetting__c/fields/UserTriggerHandlerAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>UserTriggerHandlerAfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for the functionality around User Trigger Handler</description>
    <label>UserTriggerHandlerAfterInsert</label>
    <type>Checkbox</type>
</CustomField>